--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,10 @@
                         <li><a href="#">Broken Authentication</a></li>
                     </ul>
                 </div>
-            </div>           
+            </div>
+            <div class="content-task">
+                <%- include('components/SQLInjection') %>
+            </div>          
         </div>
         <%- include('partials/footer') %>
         <script src="scripts/index.js"></script>
